# pear-mobile-chat

./: CMakeLists.txt  README.md  app.json  package-lock.json  package.json
bare/: bare-bindings-jsi.hpp  bare-bindings.cc  bare-bindings.h  runtime.js
modules/bare-bindings/: expo-module.config.json
modules/bare-bindings/android/src/main/java/to/holepunch/hellobare/: BareBindings.java  BareBindingsModule.kt
modules/bare-bindings/android/src/main/jni/: CMakeLists.txt  bare-bindings.cc
modules/bare-bindings/ios/: BareBindings.h  BareBindings.mm  BareBindings.podspec  BareBindingsModule.swift
src/rpc/: ui-handler.js  worker-handler.js
src/ui/: AppEntry.js
src/ui/containers/: App.js
src/ui/context/: rpc.js
src/ui/hooks/: use-rpc.js
src/worker/: index.js
